Author routes implemented
Routes and a new collection created for the project. Some fixes about the paginate method.
