# src/controller/library.controller.ts
@@ -1,7 +1,5 @@
-import Fastify, { FastifyInstance } from 'fastify'
 import libraryService from "../services/library.service"
 
-//const router: FastifyInstance = Fastify({})
 const service = new libraryService
 
 // ---IMPORTANT---
@@ -9,7 +7,7 @@ const service = new libraryService
 
 async function libraryControllerPlugin(router: any, opts: any) {
 
-    router.post('/', async (request: any, reply: any) => {
+    router.post('/library/create', async (request: any, reply: any) => {
         // #swagger.tags = ['Library']
         // #swagger.summary = 'Create a book'
         // #swagger.description = 'This route will be responsible for create a book in your database'
@@ -22,33 +20,33 @@ async function libraryControllerPlugin(router: any, opts: any) {
         reply.send(await service.create(request.body))
     })
 
-    router.get('/', async (request: any, reply: any) => {
+    router.get('/library/all', async (request: any, reply: any) => {
         // #swagger.tags = ['Library']    
         // #swagger.summary = 'Get all books'
         // #swagger.description = 'Get all books'
         reply.send(await service.getAll())
     })
 
-    router.get('/book', async (request: any, reply: any) => {
+    router.get('/library/book', async (request: any, reply: any) => {
         // #swagger.tags = ['Library']
         // #swagger.summary = 'Search for a book'
-        // #swagger.description = 'Search for a book using  name or  (If you pass no parameter it returns the first element from your database)'
+        // #swagger.description = 'Search for a book using  name or author name (If you pass no parameter it returns the first element from your database)'
         // #swagger.parameters['name'] = { description: 'Book name' } 
         // #swagger.parameters['author'] = { description: 'Author name'} 
 
         reply.send(await service.getBook(request.query))
     })
 
-    router.get('/paginate', async (request: any, reply: any) => {
+    router.get('/library/paginate', async (request: any, reply: any) => {
         // #swagger.tags = ['Library']
         // #swagger.summary = 'Get a limited number of books'
         // #swagger.description = 'Get a limited number of books'
-        // #swagger.parameters['page'] = { description: 'Number of pages', required: true }  
-        // #swagger.parameters['books'] = { description: 'Number of books for pages', required: true}  
+        // #swagger.parameters['page'] = { description: 'Number of page', required: true }  
+        // #swagger.parameters['books'] = { description: 'Number of books for page', required: true}  
         reply.send(await service.paginate(request.query))
     })
 
-    router.get('/author', async (request: any, reply: any) => {
+    router.get('/library/author', async (request: any, reply: any) => {
         // #swagger.tags = ['Library']
         // #swagger.summary = 'Find books by the selected author'
         // #swagger.description = 'Finds books by the selected author'
@@ -56,7 +54,7 @@ async function libraryControllerPlugin(router: any, opts: any) {
         reply.send(await service.getAuthor(request.query))
     })
 
-    router.put('/update/:name', async (request: any, reply: any) => {
+    router.put('/library/update/:name', async (request: any, reply: any) => {
         // #swagger.tags = ['Library']
         // #swagger.summary = 'Update a book'
         // #swagger.description = 'Update data from a book using your ID'
@@ -70,7 +68,7 @@ async function libraryControllerPlugin(router: any, opts: any) {
         reply.send(await service.update(request.params.name, request.body))
     })
 
-    router.delete('/delete', async (request: any, reply: any) => {
+    router.delete('/library/delete', async (request: any, reply: any) => {
         // #swagger.summary = 'Delete a book'
         // #swagger.description = 'Delete a book in database'
         // #swagger.parameters['name'] = { description: 'Book to delete', required: true }
